@@ -18,6 +18,8 @@
     <string name="mountnonextdisk">No next disk image found</string>
     <string name="diskboot">Booting image %s</string>
     <string name="none">None</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
 	<string name="menu_preferences">Preferences</string>
     <string name="cancel">Cancel</string>
     <string name="ok">OK</string>
@@ -180,4 +182,6 @@
 	<string name="pref_crophoriz_sum">Width in pixels of original screen to show</string>
 	<string name="pref_cropvert">Crop Vertically</string>
 	<string name="pref_cropvert_sum">Height in pixels of original screen to show</string>
+	<string name="pref_derotkeys">Derotate Arrow Keys</string>
+	<string name="pref_derotkeys_sum">Fix external keyboard arrow keys when display is rotated</string>
 </resources>
